Refactor SolveQuadricEq
Changes the op use JOML in the API and ojAlgo internally instead of scijava.vecmath.